tests/analyzer/dbu.cm.err
Error: unknown name "x" at or near line 5
Error: Operand mismatch for '=' at or near line 5
[0;31mError main:660: Error Analyzing
[0m